@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.Mq</id>
-    <version>1.3.2-dev-2020-10-04-00-01</version>
+    <version>1.3.2-dev-2020-10-08-15-07</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,12 +10,12 @@
     <projectUrl>https://github.com/taucode/taucode.mq</projectUrl>
     <description>Basic functionality for message queue support</description>
     <releaseNotes>
-      Complete refactoring of the TauCode MQ stack.
+      Took stuff like IMessageHandler from TauCode.Mq.Abstractions.
     </releaseNotes>
     <tags>taucode message queue</tags>
     <dependencies>
       <group targetFramework=".NETStandard2.1">
-        <dependency id="TauCode.Mq.Abstractions" version="1.3.2-dev-2020-10-02-21-05" />
+        <dependency id="TauCode.Mq.Abstractions" version="1.3.2-dev-2020-10-08-15-00" />
         <dependency id="TauCode.Working" version="1.3.2-dev-2020-10-04-22-32" />
       </group>
     </dependencies>
