@@ -1,0 +1,7 @@
+﻿namespace TauCode.Mq
+{
+    public interface IMessageHandler
+    {
+        void Handle(object message);
+    }
+}
